--- a/w5/notebooks/detection.ipynb
+++ b/w5/notebooks/detection.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,18 +133,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Tuple, Iterable\n",
     "import numpy as np\n",
     "\n",
-    "def sliding_window(image: np.array, step_size: int, window_size: Tuple[int, int]) -> Iterable[int, int, np.ndarray]:\n",
-    "    H, W = image.shape  # considering image is 2 channels, you should put a check here\n",
+    "def sliding_window(image: np.array, step_size: int, window_size: Tuple[int, int]) -> Iterable[Tuple[int, int, np.ndarray]]:\n",
+    "    H, W = image.shape\n",
+    "    # Check if the image has two channels as expected\n",
+    "    if len(image.shape) != 2:\n",
+    "        raise ValueError(\"Input image should be a 2D array.\")\n",
+    "    \n",
     "    for y in range(0, H, step_size):\n",
     "        for x in range(0, W, step_size):\n",
-    "            yield (x, y, image[y: y + window_size[1], x: x + window_size[0]])"
+    "            yield (x, y, image[y: y + window_size[1], x: x + window_size[0]])\n"
    ]
   },
   {
@@ -210,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,45 +424,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using cache found in /home/denizberkin/.cache/torch/hub/ultralytics_yolov5_master\n"
+      "/Users/dogukanince/miniforge3/lib/python3.10/site-packages/torch/hub.py:295: UserWarning: You are about to download and run code from an untrusted repository. In a future release, this won't be allowed. To add the repository to your trusted list, change the command to {calling_fn}(..., trust_repo=False) and a command prompt will appear asking for an explicit confirmation of trust, or load(..., trust_repo=True), which will assume that the prompt is to be answered with 'yes'. You can also use load(..., trust_repo='check') which will only prompt for confirmation if the repo is not already trusted. This will eventually be the default behaviour\n",
+      "  warnings.warn(\n",
+      "Downloading: \"https://github.com/ultralytics/yolov5/zipball/master\" to /Users/dogukanince/.cache/torch/hub/master.zip\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Collecting ultralytics\n",
+      "  Downloading ultralytics-8.3.27-py3-none-any.whl.metadata (35 kB)\n",
+      "Requirement already satisfied: numpy>=1.23.0 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from ultralytics) (1.26.4)\n",
+      "Requirement already satisfied: matplotlib>=3.3.0 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from ultralytics) (3.8.4)\n",
+      "Requirement already satisfied: opencv-python>=4.6.0 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from ultralytics) (4.10.0.84)\n",
+      "Requirement already satisfied: pillow>=7.1.2 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from ultralytics) (10.4.0)\n",
+      "Requirement already satisfied: pyyaml>=5.3.1 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from ultralytics) (6.0.1)\n",
+      "Requirement already satisfied: requests>=2.23.0 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from ultralytics) (2.31.0)\n",
+      "Requirement already satisfied: scipy>=1.4.1 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from ultralytics) (1.13.1)\n",
+      "Requirement already satisfied: torch>=1.8.0 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from ultralytics) (2.4.1)\n",
+      "Requirement already satisfied: torchvision>=0.9.0 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from ultralytics) (0.19.1)\n",
+      "Requirement already satisfied: tqdm>=4.64.0 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from ultralytics) (4.66.1)\n",
+      "Requirement already satisfied: psutil in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from ultralytics) (5.9.8)\n",
+      "Collecting py-cpuinfo (from ultralytics)\n",
+      "  Downloading py_cpuinfo-9.0.0-py3-none-any.whl.metadata (794 bytes)\n",
+      "Requirement already satisfied: pandas>=1.1.4 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from ultralytics) (2.2.3)\n",
+      "Requirement already satisfied: seaborn>=0.11.0 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from ultralytics) (0.13.2)\n",
+      "Collecting ultralytics-thop>=2.0.0 (from ultralytics)\n",
+      "  Downloading ultralytics_thop-2.0.10-py3-none-any.whl.metadata (9.4 kB)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from matplotlib>=3.3.0->ultralytics) (1.2.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from matplotlib>=3.3.0->ultralytics) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from matplotlib>=3.3.0->ultralytics) (4.51.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from matplotlib>=3.3.0->ultralytics) (1.4.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from matplotlib>=3.3.0->ultralytics) (23.2)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from matplotlib>=3.3.0->ultralytics) (3.1.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from matplotlib>=3.3.0->ultralytics) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from pandas>=1.1.4->ultralytics) (2024.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from pandas>=1.1.4->ultralytics) (2024.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from requests>=2.23.0->ultralytics) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from requests>=2.23.0->ultralytics) (3.6)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from requests>=2.23.0->ultralytics) (2.1.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from requests>=2.23.0->ultralytics) (2024.2.2)\n",
+      "Requirement already satisfied: filelock in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from torch>=1.8.0->ultralytics) (3.15.4)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from torch>=1.8.0->ultralytics) (4.12.2)\n",
+      "Requirement already satisfied: sympy in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from torch>=1.8.0->ultralytics) (1.13.2)\n",
+      "Requirement already satisfied: networkx in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from torch>=1.8.0->ultralytics) (3.3)\n",
+      "Requirement already satisfied: jinja2 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from torch>=1.8.0->ultralytics) (3.1.4)\n",
+      "Requirement already satisfied: fsspec in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from torch>=1.8.0->ultralytics) (2024.6.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib>=3.3.0->ultralytics) (1.16.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from jinja2->torch>=1.8.0->ultralytics) (2.1.5)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from sympy->torch>=1.8.0->ultralytics) (1.3.0)\n",
+      "Downloading ultralytics-8.3.27-py3-none-any.whl (878 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m879.0/879.0 kB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading ultralytics_thop-2.0.10-py3-none-any.whl (26 kB)\n",
+      "Downloading py_cpuinfo-9.0.0-py3-none-any.whl (22 kB)\n",
+      "Installing collected packages: py-cpuinfo, ultralytics-thop, ultralytics\n",
+      "Successfully installed py-cpuinfo-9.0.0 ultralytics-8.3.27 ultralytics-thop-2.0.10\n",
       "Creating new Ultralytics Settings v0.0.6 file ✅ \n",
-      "View Ultralytics Settings with 'yolo settings' or at '/home/denizberkin/.config/Ultralytics/settings.json'\n",
-      "Update Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\n"
+      "View Ultralytics Settings with 'yolo settings' or at '/Users/dogukanince/Library/Application Support/Ultralytics/settings.json'\n",
+      "Update Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\n",
+      "\u001b[31m\u001b[1mrequirements:\u001b[0m Ultralytics requirements ['gitpython>=3.1.30', 'requests>=2.32.2', 'tqdm>=4.66.3', 'setuptools>=70.0.0'] not found, attempting AutoUpdate...\n",
+      "Collecting gitpython>=3.1.30\n",
+      "  Downloading GitPython-3.1.43-py3-none-any.whl.metadata (13 kB)\n",
+      "Collecting requests>=2.32.2\n",
+      "  Downloading requests-2.32.3-py3-none-any.whl.metadata (4.6 kB)\n",
+      "Collecting tqdm>=4.66.3\n",
+      "  Downloading tqdm-4.66.6-py3-none-any.whl.metadata (57 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.6/57.6 kB\u001b[0m \u001b[31m829.9 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting setuptools>=70.0.0\n",
+      "  Downloading setuptools-75.3.0-py3-none-any.whl.metadata (6.9 kB)\n",
+      "Collecting gitdb<5,>=4.0.1 (from gitpython>=3.1.30)\n",
+      "  Downloading gitdb-4.0.11-py3-none-any.whl.metadata (1.2 kB)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from requests>=2.32.2) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from requests>=2.32.2) (3.6)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from requests>=2.32.2) (2.1.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/dogukanince/miniforge3/lib/python3.10/site-packages (from requests>=2.32.2) (2024.2.2)\n",
+      "Collecting smmap<6,>=3.0.1 (from gitdb<5,>=4.0.1->gitpython>=3.1.30)\n",
+      "  Downloading smmap-5.0.1-py3-none-any.whl.metadata (4.3 kB)\n",
+      "Downloading GitPython-3.1.43-py3-none-any.whl (207 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.3/207.3 kB\u001b[0m \u001b[31m2.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading requests-2.32.3-py3-none-any.whl (64 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m64.9/64.9 kB\u001b[0m \u001b[31m43.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading tqdm-4.66.6-py3-none-any.whl (78 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.3/78.3 kB\u001b[0m \u001b[31m11.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading setuptools-75.3.0-py3-none-any.whl (1.3 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m7.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0mm\n",
+      "\u001b[?25hDownloading gitdb-4.0.11-py3-none-any.whl (62 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.7/62.7 kB\u001b[0m \u001b[31m111.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading smmap-5.0.1-py3-none-any.whl (24 kB)\n",
+      "Installing collected packages: tqdm, smmap, setuptools, requests, gitdb, gitpython\n",
+      "  Attempting uninstall: tqdm\n",
+      "    Found existing installation: tqdm 4.66.1\n",
+      "    Uninstalling tqdm-4.66.1:\n",
+      "      Successfully uninstalled tqdm-4.66.1\n",
+      "  Attempting uninstall: setuptools\n",
+      "    Found existing installation: setuptools 68.2.2\n",
+      "    Uninstalling setuptools-68.2.2:\n",
+      "      Successfully uninstalled setuptools-68.2.2\n",
+      "  Attempting uninstall: requests\n",
+      "    Found existing installation: requests 2.31.0\n",
+      "    Uninstalling requests-2.31.0:\n",
+      "      Successfully uninstalled requests-2.31.0\n",
+      "Successfully installed gitdb-4.0.11 gitpython-3.1.43 requests-2.32.3 setuptools-75.3.0 smmap-5.0.1 tqdm-4.66.6\n",
+      "\n",
+      "\u001b[31m\u001b[1mrequirements:\u001b[0m AutoUpdate success ✅ 4.6s, installed 4 packages: ['gitpython>=3.1.30', 'requests>=2.32.2', 'tqdm>=4.66.3', 'setuptools>=70.0.0']\n",
+      "\u001b[31m\u001b[1mrequirements:\u001b[0m ⚠️ \u001b[1mRestart runtime or rerun command for updates to take effect\u001b[0m\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "YOLOv5 🚀 2024-10-5 Python-3.11.9 torch-2.4.1+cu121 CUDA:0 (NVIDIA GeForce RTX 3060, 12288MiB)\n",
+      "YOLOv5 🚀 2024-11-3 Python-3.10.13 torch-2.4.1 CPU\n",
       "\n",
       "Downloading https://github.com/ultralytics/yolov5/releases/download/v7.0/yolov5s.pt to yolov5s.pt...\n",
-      "100%|██████████| 14.1M/14.1M [00:00<00:00, 48.4MB/s]\n",
+      "100%|██████████| 14.1M/14.1M [00:01<00:00, 10.5MB/s]\n",
       "\n",
       "Fusing layers... \n",
       "YOLOv5s summary: 213 layers, 7225885 parameters, 0 gradients, 16.4 GFLOPs\n",
       "Adding AutoShape... \n",
-      "/home/denizberkin/.cache/torch/hub/ultralytics_yolov5_master/models/common.py:892: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "/Users/dogukanince/.cache/torch/hub/ultralytics_yolov5_master/models/common.py:892: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
       "  with amp.autocast(autocast):\n",
       "image 1/5: 720x1280 2 persons, 2 ties\n",
       "image 2/5: 880x1580 2 cars, 1 boat\n",
       "image 3/5: 1080x1920 1 person\n",
       "image 4/5: 3116x4816 1 sports ball, 1 fork, 1 knife, 1 apple, 1 scissors\n",
       "image 5/5: 1080x1920 1 person, 1 chair, 2 tvs, 1 refrigerator\n",
-      "Speed: 917.6ms pre-process, 15.2ms inference, 35.1ms NMS per image at shape (5, 3, 416, 640)\n",
+      "Speed: 1391.5ms pre-process, 61.9ms inference, 2.2ms NMS per image at shape (5, 3, 416, 640)\n",
       "Saved 5 images to \u001b[1mruns/detect/exp\u001b[0m\n"
      ]
     }
@@ -502,7 +602,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "inzva",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -516,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
