--- a/w5/notebooks/batch_size_comparison.ipynb
+++ b/w5/notebooks/batch_size_comparison.ipynb
@@ -386,7 +386,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "inzva",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -400,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
